--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -8,3 +8,79 @@
   max-width: 150px;
   height: auto;
 }
+
+.active-pink-4 input[type=text]:focus:not([readonly]) {
+  border: 1px solid orange;
+  box-shadow: 0 0 0 1px orange;
+  }
+  .active-pink-3 input[type=text] {
+  border: 1px solid ;
+  box-shadow: 0 0 0 1px ;
+  }
+
+  form{
+    display: inline;
+    }
+
+
+/* CARDS */
+.star-rating li {
+	padding: 0;
+}
+.star-rating i {
+	font-size: 14px;
+	color: #ffc000;
+}
+
+#panels:hover {
+  background-color: white;
+  transition: transform .3s;
+  transform: scale(1.01);
+  transform-style: flat;
+
+
+
+}
+
+.container {
+  margin-left: 230px;
+
+}
+
+.pic {
+
+  height: 50px;
+  width: 50px;
+  border-radius: 45%;
+}
+
+.checked {
+  color: orange;
+}
+
+.star {
+  font-size: 1.5rem;
+  color: #b0c4de;
+}
+.filled {
+  color: #1e90ff;
+}
+.bad {
+  color: #deb0b0;
+}
+.filled.bad {
+  color: #ff1e1e;
+}
+.zoomin img {
+  height: 200px;
+  width: 200px;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  transition: all 2s ease;
+}
+.zoomin img:hover {
+  width: 300px;
+  height: 300px;
+}
+
