--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -11,7 +11,7 @@
   <ngb-tabset >
     <ngb-tab title="Users" (tabChange)="selectedUser = false">
       <ng-template ngbTabContent>
-        <div id="userList" class="container" *ngIf="!selectedUser">
+        <div id="userList" class="container-fluid" *ngIf="!selectedUser">
           <table class="table table-striped table-hover">
             <thead class="thead-light">
               <tr>
@@ -56,7 +56,7 @@
     <ngb-tab>
       <ng-template ngbTabTitle><b>Gear</b> List</ng-template>
       <ng-template ngbTabContent>
-      <div id="gearList" class="container" *ngIf="!selectedGear">
+      <div id="gearList" class="container-fluid" *ngIf="!selectedGear">
         <table class="table table-striped table-hover">
           <thead class="thead-light">
             <tr>
@@ -99,31 +99,26 @@
 
     <ngb-tab title="Reservations">
       <ng-template ngbTabContent>
-        <div id="resvList" class="container" *ngIf="!selectedResv">
+        <div id="resvList" class="container-fluid" *ngIf="!selectedResv">
           <table class="table table-striped table-hover">
             <thead class="thead-light">
               <tr>
                 <th>Reservation Id</th>
                 <th>Lender Id</th>
-                <th>Lender Email</th>
                 <th>Renter Id</th>
-                <th>Renter Email</th>
                 <th>Created Date</th>
-                <th>Approved</th>
                 <th>Approved</th>
                 <th>Completed</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let gear of gearList" class="showHand" (click)="selectedResv = true">
-                <td>{{ resv.id }}</td>
-                <td>{{ resv.gearId.user.id }}</td>
-                <td>{{ resv.gearId.user.email }}</td>
-                <td>{{ resv.userShopper.id }}</td>
-                <td>{{ resv.userShopper.email }}</td>
-                <td>{{ resv.createdAt }}</td>
-                <td>{{ resv.approved }}</td>
-                <td>{{ resv.completed }}</td>
+              <tr *ngFor="let reservation of resvList" class="showHand" (click)="selectedResv = true">
+                <td>{{ reservation.id }}</td>
+                <td>{{ reservation.gearId.user.id }}</td>
+                <td>{{ reservation.userShopper.id }}</td>
+                <td>{{ reservation.createdAt }}</td>
+                <td>{{ reservation.approved }}</td>
+                <td>{{ reservation.completed }}</td>
               </tr>
             </tbody>
           </table>
@@ -135,7 +130,7 @@
           <button
             type="button"
             class="btn btn-outline-primary"
-            (click)="selectedGear = false"
+            (click)="selectedResv = false"
           >
             Back
           </button>
