--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -27,8 +27,8 @@
 
           <div class="form-group">
             <label for="username" class="sr-only">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="username" ngModel
-              required>
+            <input type="text" class="form-control" id="username" name="username" placeholder="username (email address)"
+              ngModel required>
           </div>
 
           <div class="form-group">
@@ -53,11 +53,36 @@
             <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
           </div>
 
-          <!-- Add Address
-        <div class="form-group">
-          <label for="about" class="sr-only">Address</label>
-          <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
-        </div> -->
+          <!-- Add Address -->
+          <!-- <div class="form-group">
+            <label for="address.address" class="sr-only">Address</label>
+            <input type="text" class="form-control" id="address.address" name="address.address" placeholder="address"
+              ngModel required>
+          </div>
+
+          <div class="form-group">
+            <label for="address.address2" class="sr-only">Address 2</label>
+            <input type="text" class="form-control" id="address.address2" name="address.address2"
+              placeholder="address (second line)" ngModel>
+          </div>
+
+          <div class="form-group">
+            <label for="address.city" class="sr-only">City</label>
+            <input type="text" class="form-control" id="address.city" name="address.city" placeholder="city" ngModel
+              required>
+          </div>
+
+          <div class="form-group">
+            <label for="address.state" class="sr-only">State</label>
+            <input type="text" class="form-control" id="address.state" name="address.state" placeholder="state" ngModel
+              required>
+          </div>
+
+          <div class="form-group">
+            <label for="address.postalCode" class="sr-only">State</label>
+            <input type="number" class="form-control" id="address.postalCode" name="address.postalCode"
+              placeholder="postal code" ngModel required min="501">
+          </div> -->
 
         </div>
         <button type="submit" class="btn btn-success" (click)="register(registerForm)">Register</button>
