--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.html
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.html
@@ -132,9 +132,9 @@
                       <div class="col-xs-4">
                         <p>{{item.user.firstName | titlecase}}</p>
                         <br>
-                        <ngb-rating [(rate)]="currentRate">
-                          <ng-template let-fill="fill" let-index="index">
-                            <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
+                        <ngb-rating [(rate)]="item.user.id" [readonly]="true">
+                          <ng-template let-fill="fill" let-index="index" >
+                            <span class="star" [class.filled]="fill === 100" [class.bad]="index < 0">&#9733;</span>
                           </ng-template>
                         </ngb-rating>
                         <h6>Rating: <b>{{item.user.id}}</b></h6>
