register works, but not with an address in Angular

--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -58,9 +58,9 @@
             <label for="address.address" class="sr-only">Address</label>
             <input type="text" class="form-control" id="address.address" name="address.address" placeholder="address"
               ngModel required>
-          </div>
+          </div> -->
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="address.address2" class="sr-only">Address 2</label>
             <input type="text" class="form-control" id="address.address2" name="address.address2"
               placeholder="address (second line)" ngModel>
