--- a/ngGearSilo/src/app/components/admin/admin.component.html
+++ b/ngGearSilo/src/app/components/admin/admin.component.html
@@ -1,18 +1,19 @@
 <nav>
   <div class="container-fluid navbar navbar-light bg-light">
     <a class="navbar-brand"><strong>Admin</strong></a>
-    <h1>
-      <span class="badge badge-primary">{{ countUsers() }}</span> GearSilo Users,
-      <span class="badge badge-primary">{{ countGear() }}</span> pieces of Gear, and
+    <h1> GearSilo has
+      <span class="badge badge-primary">{{ countUsers() }}</span>
+      Users, <span class="badge badge-primary">{{ countGear() }}</span> pieces
+      of Gear, and
       <span class="badge badge-primary">{{ countResv() }}</span> Reservations
     </h1>
   </div>
 </nav>
 
-<!-- User List  -->
+<!-- User List Tab -->
 
 <div class="container-fluid bg-light">
-  <ngb-tabset >
+  <ngb-tabset>
     <ngb-tab title="Users" (tabChange)="selectedUser = false">
       <ng-template ngbTabContent>
         <div id="userList" class="container-fluid" *ngIf="!selectedUser">
@@ -46,114 +47,145 @@
 
         <!-- Single User Display w/Options Here -->
 
-          <div class="container" id="oneUser" *ngIf="selectedUser"> <!-- Add && !selectedUpdate element here -->
-            <h1>{{ selectedUser.firstName | uppercase }} {{ selectedUser.lastName | uppercase }}</h1>
-            <br />
-            <ul class="list-group">
-              <li class="list-group-item">
-                User Id: {{ selectedUser.id }}
-              </li>
-              <li class="list-group-item">
-                Email: {{ selectedUser.email }}
-              </li>
-              <li class="list-group-item">
-                Password: {{ selectedUser.password }}
-              </li>
-              <li class="list-group-item">
-                Address: {{ selectedUser.address.address }}
-              </li>
-              <li class="list-group-item">
-                Address2: {{ selectedUser.address.address2 }}
-              </li>
-              <li class="list-group-item">
-                City: {{ selectedUser.address.city }}
-              </li>
-              <li class="list-group-item">
-                State: {{ selectedUser.address.state }}
-              </li>
-              <li class="list-group-item">
-                Country: {{ selectedUser.address.country }}
-              </li>
-              <li class="list-group-item">
-                Postal Code: {{ selectedUser.address.postalCode }}
-              </li>
-              <li class="list-group-item">
-                Phone: {{ selectedUser.phone }}
-              </li>
-              <li class="list-group-item">
-                Created: {{ selectedUser.createdAt | date: "shortDate" }}
-              </li>
-              <li class="list-group-item">
-                Last Updated: {{ selectedUser.updatedAt | date: "shortDate" }}
-              </li>
-              <li class="list-group-item">
-                Role: {{ selectedUser.role }}
-              </li>
-              <li class="list-group-item">
-                Created: {{ selectedUser.enabled }}
-              </li>
-            </ul>
-            <br />
-            <div class="btn-group" role="group" aria-label="selected task">
-              <button class="btn btn-outline-success" (click)="selectedUser = null">
-                Back
-              </button>
-              <button class="btn btn-outline-success" > <!-- (click)="setUpdateUser()" -->
-                Edit
-              </button>
-            </div>
+        <div class="container" id="oneUser" *ngIf="selectedUser">
+          <!-- Add && !selectedUpdate element here -->
+          <h1>
+            {{ selectedUser.firstName | uppercase }}
+            {{ selectedUser.lastName | uppercase }}
+          </h1>
+          <br />
+          <ul class="list-group">
+            <li class="list-group-item">User Id: {{ selectedUser.id }}</li>
+            <li class="list-group-item">Email: {{ selectedUser.email }}</li>
+            <li class="list-group-item">
+              Password: {{ selectedUser.password }}
+            </li>
+            <li class="list-group-item">
+              Address: {{ selectedUser.address.address }}
+            </li>
+            <li class="list-group-item">
+              Address2: {{ selectedUser.address.address2 }}
+            </li>
+            <li class="list-group-item">
+              City: {{ selectedUser.address.city }}
+            </li>
+            <li class="list-group-item">
+              State: {{ selectedUser.address.state }}
+            </li>
+            <li class="list-group-item">
+              Country: {{ selectedUser.address.country }}
+            </li>
+            <li class="list-group-item">
+              Postal Code: {{ selectedUser.address.postalCode }}
+            </li>
+            <li class="list-group-item">Phone: {{ selectedUser.phone }}</li>
+            <li class="list-group-item">
+              Created: {{ selectedUser.createdAt | date: "shortDate" }}
+            </li>
+            <li class="list-group-item">
+              Last Updated: {{ selectedUser.updatedAt | date: "shortDate" }}
+            </li>
+            <li class="list-group-item">Role: {{ selectedUser.role }}</li>
+            <li class="list-group-item">Created: {{ selectedUser.enabled }}</li>
+          </ul>
+          <br />
+          <div class="btn-group" role="group" aria-label="selected task">
+            <button
+              class="btn btn-outline-success"
+              (click)="selectedUser = null"
+            >
+              Back
+            </button>
+            <button class="btn btn-outline-success">
+              <!-- (click)="setUpdateUser()" -->
+              Edit
+            </button>
           </div>
+        </div>
       </ng-template>
     </ngb-tab>
     <ngb-tab>
       <ng-template ngbTabTitle><b>Gear</b> List</ng-template>
       <ng-template ngbTabContent>
-
         <!-- Gear List Tab -->
 
-      <div id="gearList" class="container-fluid" *ngIf="!selectedGear">
-        <table class="table table-striped table-hover">
-          <thead class="thead-light">
-            <tr>
-              <th>Id</th>
-              <th>Gear</th>
-              <th>Owner Id</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Available</th>
-              <th>Active</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let gear of gearList" class="showHand" (click)="selectedGear = true">
-              <td>{{ gear.id }}</td>
-              <td>{{ gear.name }}</td>
-              <td>{{ gear.user.id }}</td>
-              <td>{{ gear.user.firstName }}</td>
-              <td>{{ gear.user.lastName }}</td>
-              <td>{{ gear.available }}</td>
-              <td>{{ gear.active }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+        <div id="gearList" class="container-fluid" *ngIf="!selectedGear">
+          <table class="table table-striped table-hover">
+            <thead class="thead-light">
+              <tr>
+                <th>Id</th>
+                <th>Gear</th>
+                <th>Owner Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Available</th>
+                <th>Active</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                *ngFor="let gear of gearList"
+                class="showHand"
+                (click)="selectedGear = gear"
+              >
+                <td>{{ gear.id }}</td>
+                <td>{{ gear.name }}</td>
+                <td>{{ gear.user.id }}</td>
+                <td>{{ gear.user.firstName }}</td>
+                <td>{{ gear.user.lastName }}</td>
+                <td>{{ gear.available }}</td>
+                <td>{{ gear.active }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-      <!-- Single Gear Display w/Options Here -->
+        <!-- Single Gear Display w/Options Here -->
 
-      <div *ngIf="selectedGear">
-        <a>Diplay Single</a>
-        <button
-          type="button"
-          class="btn btn-outline-primary"
-          (click)="selectedGear = false"
-        >
-          Back
-        </button>
-      </div>
-    </ng-template>
-      </ngb-tab>
+        <div class="container" id="oneGear" *ngIf="selectedGear">
+          <!-- && !updateResv element here -->
+          <h1>{{ selectedGear.name | uppercase }}</h1>
+          <br />
+          <ul class="list-group">
+            <li class="list-group-item">Gear Id: {{ selectedGear.id }}</li>
+            <li class="list-group-item">Active: {{ selectedGear.active }}</li>
+            <li class="list-group-item">
+              Available: {{ selectedGear.available }}
+            </li>
+            <li class="list-group-item">
+              Lender First: {{ selectedGear.user.firstName }}
+            </li>
+            <li class="list-group-item">
+              Lender Last: {{ selectedGear.user.lastName }}
+            </li>
+            <li class="list-group-item">
+              Condition: {{ selectedGear.gearCondition }}
+            </li>
+            <li class="list-group-item">
+              Description: {{ selectedGear.description }}
+            </li>
+            <li class="list-group-item">Price: {{ selectedGear.price }}</li>
+            <li class="list-group-item">IMG-1: {{ selectedGear.imageUrl }}</li>
+            <li class="list-group-item">IMG-2: {{ selectedGear.imageUrl2 }}</li>
+            <li class="list-group-item">IMG-3: {{ selectedGear.imageUrl3 }}</li>
+          </ul>
+          <br />
+          <div class="btn-group" role="group" aria-label="selected task">
+            <button
+              class="btn btn-outline-success"
+              (click)="selectedGear = null"
+            >
+              Back
+            </button>
+            <button class="btn btn-outline-success">
+              Edit
+            </button>
+          </div>
+        </div>
+      </ng-template>
+    </ngb-tab>
 
-      <!-- Reservation List Tab -->
+    <!-- Reservation List Tab -->
 
     <ngb-tab title="Reservations">
       <ng-template ngbTabContent>
@@ -170,11 +202,17 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let reservation of resvList" class="showHand" (click)="selectedResv = reservation">
+              <tr
+                *ngFor="let reservation of resvList"
+                class="showHand"
+                (click)="selectedResv = reservation"
+              >
                 <td>{{ reservation.id }}</td>
                 <td>{{ reservation.gearId.user.id }}</td>
                 <td>{{ reservation.userShopper.id }}</td>
-                <td type="date">{{ reservation.createdAt | date: "shortDate" }}</td>
+                <td type="date">
+                  {{ reservation.createdAt | date: "shortDate" }}
+                </td>
                 <td>{{ reservation.approved }}</td>
                 <td>{{ reservation.completed }}</td>
               </tr>
@@ -184,7 +222,8 @@
 
         <!-- Single Reservation Display w/Options Here -->
 
-        <div class="container" id="oneReservation" *ngIf="selectedResv"> <!-- && !updateResv element here -->
+        <div class="container" id="oneReservation" *ngIf="selectedResv">
+          <!-- && !updateResv element here -->
           <h1>{{ selectedResv.gearId.name | uppercase }}</h1>
           <br />
           <ul class="list-group">
@@ -192,7 +231,8 @@
               Reservation Id: {{ selectedResv.id }}
             </li>
             <li class="list-group-item">
-              Reservation Created: {{ selectedResv.createdAt | date: "shortDate" }}
+              Reservation Created:
+              {{ selectedResv.createdAt | date: "shortDate" }}
             </li>
             <li class="list-group-item">
               Approved: {{ selectedResv.approved }}
@@ -215,7 +255,10 @@
           </ul>
           <br />
           <div class="btn-group" role="group" aria-label="selected task">
-            <button class="btn btn-outline-success" (click)="selectedResv = null">
+            <button
+              class="btn btn-outline-success"
+              (click)="selectedResv = null"
+            >
               Back
             </button>
             <button class="btn btn-outline-success">
