--- a/ngGearSilo/src/app/components/register/register.component.html
+++ b/ngGearSilo/src/app/components/register/register.component.html
@@ -9,83 +9,79 @@
         <div class="login-group">
 
           <div class="form-group">
-            <label for="firstName" class="sr-only">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name" ngModel
-              required>
+            <label for="firstName">First Name:
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="first name" ngModel
+                required></label>
           </div>
 
           <div class="form-group">
-            <label for="lastName" class="sr-only">Last Name</label>
-            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name" ngModel
-              required>
+            <label for="lastName">Last Name:
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="last name" ngModel
+                required></label>
           </div>
 
           <div class="form-group">
-            <label for="email" class="sr-only">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="email" ngModel required>
+            <label for="email">Email:
+              <input type="email" class="form-control" id="email" name="email" placeholder="email" ngModel
+                required></label>
           </div>
 
           <div class="form-group">
-            <label for="username" class="sr-only">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="username (email address)"
-              ngModel required>
+            <label for="password">Password:
+              <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel
+                required minlength="4"> </label>
           </div>
 
           <div class="form-group">
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel
-              required minlength="4">
+            <label for="imageUrl">Image URL:
+              <input type="text" class="form-control" id="imageUrl" name="imageUrl" placeholder="image URL"
+                ngModel></label>
           </div>
 
           <div class="form-group">
-            <label for="imageUrl" class="sr-only">Image URL</label>
-            <input type="text" class="form-control" id="imageUrl" name="imageUrl" placeholder="image URL" ngModel>
+            <label for="phone">Phone:
+              <input type="text" class="form-control" id="phone" name="phone" placeholder="phone" ngModel required
+                minlength="10"></label>
           </div>
 
           <div class="form-group">
-            <label for="phone" class="sr-only">Phone</label>
-            <input type="text" class="form-control" id="phone" name="phone" placeholder="phone" ngModel required
-              minlength="10">
-          </div>
-
-          <div class="form-group">
-            <label for="about" class="sr-only">About</label>
-            <input type="text" class="form-control" id="about" name="about" placeholder="about" ngModel>
+            <label for="about">About:
+              <textarea cols="40" rows="5" class="form-control" id="about" name="about" placeholder="about"
+                ngModel></textarea></label>
           </div>
 
           <!-- Add Address -->
-          <!-- <div class="form-group">
-            <label for="address.address" class="sr-only">Address</label>
-            <input type="text" class="form-control" id="address.address" name="address.address" placeholder="address"
-              ngModel required>
-          </div> -->
-
-          <!-- <div class="form-group">
-            <label for="address.address2" class="sr-only">Address 2</label>
-            <input type="text" class="form-control" id="address.address2" name="address.address2"
-              placeholder="address (second line)" ngModel>
+          <div class="form-group">
+            <label for="address">Address:
+              <input type="text" class="form-control" id="address" name="address" placeholder="address" ngModel
+                required></label>
           </div>
 
           <div class="form-group">
-            <label for="address.city" class="sr-only">City</label>
-            <input type="text" class="form-control" id="address.city" name="address.city" placeholder="city" ngModel
-              required>
+            <label for="address2">Address 2:
+              <input type="text" class="form-control" id="address2" name="address2" placeholder="address (second line)"
+                ngModel></label>
           </div>
 
           <div class="form-group">
-            <label for="address.state" class="sr-only">State</label>
-            <input type="text" class="form-control" id="address.state" name="address.state" placeholder="state" ngModel
-              required>
+            <label for="city">City:
+              <input type="text" class="form-control" id="city" name="city" placeholder="city" ngModel required></label>
           </div>
 
           <div class="form-group">
-            <label for="address.postalCode" class="sr-only">State</label>
-            <input type="number" class="form-control" id="address.postalCode" name="address.postalCode"
-              placeholder="postal code" ngModel required min="501">
-          </div> -->
+            <label for="state">State:
+              <input type="text" class="form-control" id="state" name="state" placeholder="state" ngModel
+                required></label>
+          </div>
+
+          <div class="form-group">
+            <label for="postalCode">Zip Code:
+              <input type="number" class="form-control" id="postalCode" name="postalCode" placeholder="postal code"
+                ngModel required min="501"></label>
+          </div>
 
         </div>
-        <button type="submit" class="btn btn-success" (click)="register(registerForm)">Register</button>
+        <button type="submit" class="btn btn-dark my-2 my-sm-0" (click)="register(registerForm)">Register</button>
       </div>
 
     </form>
