--- a/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
+++ b/ngGearSilo/src/app/components/nav-bar/nav-bar.component.html
@@ -7,8 +7,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link active" [routerLink]="['/users']" *ngIf="userLogInCheck()">Profile <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link showHand" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link showHand" [routerLink]="['/users']" *ngIf="userLogInCheck()">Profile <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link showHand" onclick="window.location='#/gears'">Gear</a>
       <a class="nav-item nav-link showHand" [routerLink]="['/about']">About</a>
       <a class="nav-item nav-link showHand" [routerLink]="['/login']" *ngIf="!userLogInCheck()">Login</a>
