--- a/ngGearSilo/src/app/components/login/login.component.html
+++ b/ngGearSilo/src/app/components/login/login.component.html
@@ -8,21 +8,21 @@
       <div class="main-login-form">
         <div class="login-group">
           <div class="form-group">
-            <label for="username" class="sr-only">Email</label>
-            <input type="email" class="form-control" id="username" name="username" placeholder="username" ngModel
-              required>
+            <label for="username">Email:
+              <input type="email" class="form-control" id="username" name="username" placeholder="username" ngModel
+                required></label>
           </div>
           <div class="form-group">
-            <label for="password" class="sr-only">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel
-              required>
+            <label for="password">Password:
+              <input type="password" class="form-control" id="password" name="password" placeholder="password" ngModel
+                required></label>
           </div>
         </div>
-        <button type="submit" class="login-button btn btn-success" (click)="login(loginForm)">Submit</button>
+        <button type="submit" class="login-button btn btn-dark" (click)="login(loginForm)">Sign in</button>
       </div>
       <br>
       <div class="etc-login-form">
-        <p>new user? <a [routerLink]="['/register']">create new account</a></p>
+        <p>Not a user yet? <a [routerLink]="['/register']">Join our community.</a></p>
       </div>
     </form>
   </div>
